Fixes #1831: Remove all hardcoded messages in java classes. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2369 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -463,3 +463,11 @@ rest.authentication.missingUsername=Username parameter is missing
 rest.authentication.missingPassword=Password parameter is missing
 rest.authentication.missingStudyName=Studyname parameter is missing
 rest.authentication.http404=Service unavailable
+
+there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
+not_found_in_the_db = Not found in the db
+please_pick_at_least_one = Please pick at least one of the below.
+a_job_with_that_name_already_exist_please_pick = A job with that name already exists. Please pick another name.
+this_date_needs_to_be_later = This date needs to be later than the present time.
+the_study_should_be_selected = The study should be selected.
+at_least_one_of_the_following = At least one of the following should be greater than zero.
