--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -747,3 +747,26 @@ rest.authentication.http404=\u0421\u0435\u0440\u0432\u0438\u0441 \u043D\u0435\u0
 #no_permission_to_evaluate=No permission to open crf evaluation page
 #no_permission_to_evaluate=Нет доступа к странице оценки ИРК
 no_permission_to_evaluate = \u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
+
+
+#there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
+#there_was_an_unspecified_error = Возникла неизвестная ошибка с созданием объекта. Свяжитесь с системным администратором.
+there_was_an_unspecified_error = \u0412\u043e\u0437\u043d\u0438\u043a\u043b\u0430 \u043d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u0430\u044f \u043e\u0448\u0438\u0431\u043a\u0430 \u0441 \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u0435\u043c \u043e\u0431\u044a\u0435\u043a\u0442\u0430\u002e \u0421\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c\u002e
+#not_found_in_the_db = Not found in the db
+#not_found_in_the_db = Не было найдено в базе данных
+not_found_in_the_db = \u041d\u0435 \u0431\u044b\u043b\u043e \u043d\u0430\u0439\u0434\u0435\u043d\u043e \u0432 \u0431\u0430\u0437\u0435 \u0434\u0430\u043d\u043d\u044b\u0445
+#please_pick_at_least_one = Please pick at least one of the below.
+#please_pick_at_least_one = Выберите один из вариантов
+please_pick_at_least_one = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043e\u0434\u0438\u043d \u0438\u0437 \u0432\u0430\u0440\u0438\u0430\u043d\u0442\u043e\u0432
+#a_job_with_that_name_already_exist_please_pick = A job with that name already exists. Please pick another name.
+#a_job_with_that_name_already_exist_please_pick = Задача с таким названием уже существует. Пожалуйста, выберите другое.
+a_job_with_that_name_already_exist_please_pick = \u0417\u0430\u0434\u0430\u0447\u0430 \u0441 \u0442\u0430\u043a\u0438\u043c \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u043c \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0440\u0443\u0433\u043e\u0435\u002e
+#this_date_needs_to_be_later = This date needs to be later than the present time.
+#this_date_needs_to_be_later = Указаная дата должна быть позже текущей даты.
+this_date_needs_to_be_later = \u0423\u043a\u0430\u0437\u0430\u043d\u0430\u044f \u0434\u0430\u0442\u0430 \u0434\u043e\u043b\u0436\u043d\u0430 \u0431\u044b\u0442\u044c \u043f\u043e\u0437\u0436\u0435 \u0442\u0435\u043a\u0443\u0449\u0435\u0439 \u0434\u0430\u0442\u044b\u002e
+#the_study_should_be_selected = The study should be selected.
+#the_study_should_be_selected = Выберите исследование.
+the_study_should_be_selected = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435\u002e
+#at_least_one_of_the_following = At least one of the following should be greater than zero.
+#at_least_one_of_the_following = Хотя бы один из следующих элементов должен быть больше нуля.
+at_least_one_of_the_following = \u0425\u043e\u0442\u044f \u0431\u044b \u043e\u0434\u0438\u043d \u0438\u0437 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0445 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043e\u0432 \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u044c\u0448\u0435 \u043d\u0443\u043b\u044f
