--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -861,3 +861,7 @@ crf_evaluation_instruction=CRF evaluation allows a new user role "Evaluator" to 
   The system-level properties can be overridden at the study level. <br/><br/> \
   When a CRF is determined to be part of the CRF Evaluation page, a setting is turned on in the Edit Study Event Definition page. If the box "Evaluate CRF" is checked, the CRF appears in the CRF Evaluation page. <br/><br/> \
   This work is carried out by a new Evaluator Role. This role can be defined at the Study or Site level. As a Study level role, the Evaluator has access to all sites under a study. As a site-level role, the Evaluator can only access CRFs to be evaluated in specific sites. The Evaluator does not see any other study data, including queries, unless they generate them themselves.
+
+days = days.\n\n\n\n
+application_could_not_generate_the_markup = "The application could not generate the markup for the printable form.<br /> This error may have been caused by the altering of the web page's URL; the URL needs an 'id' or an 'ecId' value in its query string at the URL end.
+failed_validation_check = Failed Validation Check
