--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -353,7 +353,7 @@ expression_not_start_with_func_at  = \u0412\u044b\u0440\u0430\u0436\u0435\u043d\
 #extract_is_running  = Ваша выгрузка выполняется. Вы получите сообщение по электронной почте, когда она завершится.
 extract_is_running  = \u0412\u0430\u0448\u0430 \u0432\u044b\u0433\u0440\u0443\u0437\u043a\u0430 \u0432\u044b\u043f\u043e\u043b\u043d\u044f\u0435\u0442\u0441\u044f\u002e \u0412\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u0442\u0435 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435 \u043f\u043e \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u0435\u002c \u043a\u043e\u0433\u0434\u0430 \u043e\u043d\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0441\u044f\u002e
 #fields_for_event_all_required  =  The fields for event are all required. Please choose 'Add New Study Event' from Menu and try to add events again.
-"#fields_for_event_all_required  = Все поля в событии обязательны к заполнению. Пожалуйста выберите ""Добавить нвое событие в исследование"" и попробуйте добавить события снова."
+#fields_for_event_all_required  = Все поля в событии обязательны к заполнению. Пожалуйста выберите ""Добавить нвое событие в исследование"" и попробуйте добавить события снова."
 fields_for_event_all_required  = \u0022\u0412\u0441\u0435 \u043f\u043e\u043b\u044f \u0432 \u0441\u043e\u0431\u044b\u0442\u0438\u0438 \u043e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u044b \u043a \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u044e\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0022\u0022\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u043d\u0432\u043e\u0435 \u0441\u043e\u0431\u044b\u0442\u0438\u0435 \u0432 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0435\u0022\u0022 \u0438 \u043f\u043e\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0434\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0441\u043d\u043e\u0432\u0430\u002e\u0022
 #file_uploading_failed_please_check_logs_and_upload_again  =  File uploading failed. Please check logs and upload again.
 #file_uploading_failed_please_check_logs_and_upload_again  = Загрузка файла не удалась. Пожалуйста проверьте логи и загрузите заново.
@@ -497,8 +497,8 @@ html_email_body_4  = \u0412 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435 \u0
 #html_email_body_4_5  = , который доступен по ссылке <a href
 html_email_body_4_5  = , \u043a\u043e\u0442\u043e\u0440\u044b\u0439 \u0434\u043e\u0441\u0442\u0443\u043f\u0435\u043d \u043f\u043e \u0441\u0441\u044b\u043b\u043a\u0435 <a href
 #html_email_body_5  =  If you have any questions about this job, or you have received this message in error, please contact your system administrator for your ClinCapture instance.<br/><p>Best,<br/><br/>System Administrator for {0}
-#html_email_body_5  = Если у вас есть вопросы об этом задании иои вы получили сообщение об ошибке, пожалуйста свяжитесь с системным администратором проекта. <br/><p>С наилучшими пожеланиями,<br/><br/>Системный администратор {0}
-html_email_body_5  = \u0415\u0441\u043b\u0438 \u0443 \u0432\u0430\u0441 \u0435\u0441\u0442\u044c \u0432\u043e\u043f\u0440\u043e\u0441\u044b \u043e\u0431 \u044d\u0442\u043e\u043c \u0437\u0430\u0434\u0430\u043d\u0438\u0438 \u0438\u043e\u0438 \u0432\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435 \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435\u002c \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c \u043f\u0440\u043e\u0435\u043a\u0442\u0430. <br/><p>\u0421 \u043d\u0430\u0438\u043b\u0443\u0447\u0448\u0438\u043c\u0438 \u043f\u043e\u0436\u0435\u043b\u0430\u043d\u0438\u044f\u043c\u0438,<br/><br/>\u0421\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u0439 \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440 {0}
+#html_email_body_5  = Если у вас есть вопросы об этом задании или вы получили сообщение об ошибке, пожалуйста свяжитесь с системным администратором проекта. <br/><p>С наилучшими пожеланиями,<br/><br/>Системный администратор {0}
+html_email_body_5  = \u0415\u0441\u043b\u0438 \u0443 \u0432\u0430\u0441 \u0435\u0441\u0442\u044c \u0432\u043e\u043f\u0440\u043e\u0441\u044b \u043e\u0431 \u044d\u0442\u043e\u043c \u0437\u0430\u0434\u0430\u043d\u0438\u0438 \u0438\u043b\u0438 \u0432\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435 \u043e\u0431 \u043e\u0448\u0438\u0431\u043a\u0435\u002c \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c \u043f\u0440\u043e\u0435\u043a\u0442\u0430\u002e. <br/><p>\u0421 \u043d\u0430\u0438\u043b\u0443\u0447\u0448\u0438\u043c\u0438 \u043f\u043e\u0436\u0435\u043b\u0430\u043d\u0438\u044f\u043c\u0438,<br/><br/>\u0421\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u0439 \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440 {0}
 #html_email_header_1  =  <p>Dear
 #html_email_header_1  =  <p>Уважаемый(ая)
 html_email_header_1  =  <p>\u0423\u0432\u0430\u0436\u0430\u0435\u043c\u044b\u0439\u0028\u0430\u044f\u0029
@@ -1714,9 +1714,9 @@ error_removing_file  = \u0424\u0430\u0439\u043b \u043d\u0435 \u043c\u043e\u0436\
 ## dynamics = 
 ## dynamics = 
 # dynamics = 
-#your_answers_activated_hidden_items = Based on your answers, you need to answer additional questions below. +++++++
-#your_answers_activated_hidden_items = Исходя из ваших ответов, вам  нужно ответить на дополнительные вопросы ниже. +++++++
-your_answers_activated_hidden_items = \u0418\u0441\u0445\u043e\u0434\u044f \u0438\u0437 \u0432\u0430\u0448\u0438\u0445 \u043e\u0442\u0432\u0435\u0442\u043e\u0432\u002c \u0432\u0430\u043c  \u043d\u0443\u0436\u043d\u043e \u043e\u0442\u0432\u0435\u0442\u0438\u0442\u044c \u043d\u0430 \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0435 \u0432\u043e\u043f\u0440\u043e\u0441\u044b \u043d\u0438\u0436\u0435\u002e \u002b\u002b\u002b\u002b\u002b\u002b\u002b
+#your_answers_activated_hidden_items = Based on your answers, you need to answer additional questions below.
+#your_answers_activated_hidden_items = Исходя из ваших ответов, вам  нужно ответить на дополнительные вопросы ниже.
+your_answers_activated_hidden_items = \u0418\u0441\u0445\u043e\u0434\u044f \u0438\u0437 \u0432\u0430\u0448\u0438\u0445 \u043e\u0442\u0432\u0435\u0442\u043e\u0432\u002c \u0432\u0430\u043c  \u043d\u0443\u0436\u043d\u043e \u043e\u0442\u0432\u0435\u0442\u0438\u0442\u044c \u043d\u0430 \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0435 \u0432\u043e\u043f\u0440\u043e\u0441\u044b \u043d\u0438\u0436\u0435\u002e
 #crf_name_length_error = CRF name can not be more than 255 characters
 #crf_name_length_error = Название ИРК не может быть более 255 знаков.
 crf_name_length_error = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0418\u0420\u041a \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u0435\u0435 \u0032\u0035\u0035 \u0437\u043d\u0430\u043a\u043e\u0432\u002e
@@ -2218,3 +2218,135 @@ are_you_sure_want_to_delete  = \u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d
 #operation_cannot_be_performed_on_a_locked_crf  =  Operation cannot be performed on a locked CRF. Unlock the CRF to code a verbatim item or delete a medical code.
 #operation_cannot_be_performed_on_a_locked_crf  = Действие не может быть произведено с заблокированной ИРК. Разблокируйте ИРК чтобы закодировать термин или удалить медицинский код.
 operation_cannot_be_performed_on_a_locked_crf  = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u0440\u043e\u0438\u0437\u0432\u0435\u0434\u0435\u043d\u043e \u0441 \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u043e\u0439 \u0418\u0420\u041a\u002e \u0420\u0430\u0437\u0431\u043b\u043e\u043a\u0438\u0440\u0443\u0439\u0442\u0435 \u0418\u0420\u041a \u0447\u0442\u043e\u0431\u044b \u0437\u0430\u043a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0442\u0435\u0440\u043c\u0438\u043d \u0438\u043b\u0438 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u0438\u0439 \u043a\u043e\u0434\u002e
+
+#discrepancy_notes_are_saved_successfully = Discrepancy notes are saved successfully.
+#discrepancy_notes_are_saved_successfully = Замечания были успешно сохранены.
+discrepancy_notes_are_saved_successfully = \u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f \u0431\u044b\u043b\u0438 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u044b\u002e
+
+#error_in_data = Error in data.
+#error_in_data = Ошибка в данных.
+error_in_data = \u041e\u0448\u0438\u0431\u043a\u0430 \u0432 \u0434\u0430\u043d\u043d\u044b\u0445\u002e
+
+#rule_action_warnings = Rule Action Warnings:
+#rule_action_warnings = Предупреждение правил:
+rule_action_warnings = \u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u003a
+
+
+#the_extract_data_job_failed = The extract data job failed with the message: <br/><br/>
+#the_extract_data_job_failed = Задача по экспорту данных закончилась ошибкой: <br/><br/>
+the_extract_data_job_failed = \u0417\u0430\u0434\u0430\u0447\u0430 \u043f\u043e \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0443 \u0434\u0430\u043d\u043d\u044b\u0445 \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u0430\u0441\u044c \u043e\u0448\u0438\u0431\u043a\u043e\u0439\u003a <br/><br/>
+
+#more_information_may_be_available = <br/><br/>More information may be available in the log files.
+#more_information_may_be_available = <br/><br/>Больше информации представлено в следующих файлах логов.
+more_information_may_be_available = <br/><br/>\u0411\u043e\u043b\u044c\u0448\u0435 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438 \u043f\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043b\u0435\u043d\u043e \u0432 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0445 \u0444\u0430\u0439\u043b\u0430\u0445 \u043b\u043e\u0433\u043e\u0432\u002e
+
+#your_extract_is_now_completed = Your Extract is now completed. Please go to review it
+#your_extract_is_now_completed = Экспорт завершен. Пожалуйста, просмотрите результат
+your_extract_is_now_completed = \u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0438\u0442\u0435 \u0440\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
+
+#select_the_hour_start = Select the start hour, please.
+#select_the_hour_start = Выберите час начала.
+select_the_hour_start = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0447\u0430\u0441 \u043d\u0430\u0447\u0430\u043b\u0430\u002e
+
+#select_the_start_minute = Select the start minute, please.
+#select_the_start_minute = Выберите минуты начала.
+select_the_start_minute = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043c\u0438\u043d\u0443\u0442\u044b \u043d\u0430\u0447\u0430\u043b\u0430\u002e
+
+#you_have_successfully_created_a_new_job = You have successfully created a new job:
+#you_have_successfully_created_a_new_job = Задача была успешно создана:
+you_have_successfully_created_a_new_job = \u0417\u0430\u0434\u0430\u0447\u0430 \u0431\u044b\u043b\u0430 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u043d\u0430\u003a
+
+#which_is_now_set_to_run = which is now set to run at the time you specified.
+#which_is_now_set_to_run = Задача будет запущенна в указанное вами время.
+which_is_now_set_to_run = \u0417\u0430\u0434\u0430\u0447\u0430 \u0431\u0443\u0434\u0435\u0442 \u0437\u0430\u043f\u0443\u0449\u0435\u043d\u043d\u0430 \u0432 \u0443\u043a\u0430\u0437\u0430\u043d\u043d\u043e\u0435 \u0432\u0430\u043c\u0438 \u0432\u0440\u0435\u043c\u044f\u002e
+#please_pick_at_least_one = Please pick at least one.
+#please_pick_at_least_one = Выберите хотя бы один из вариантов.
+please_pick_at_least_one = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0445\u043e\u0442\u044f \u0431\u044b \u043e\u0434\u0438\u043d \u0438\u0437 \u0432\u0430\u0440\u0438\u0430\u043d\u0442\u043e\u0432\u002e
+
+#this_date_needs_to_be_later = This date needs to be later than the present time.
+#this_date_needs_to_be_later = Дата должна быть позже чем текущая дата.
+this_date_needs_to_be_later = \u0414\u0430\u0442\u0430 \u0434\u043e\u043b\u0436\u043d\u0430 \u0431\u044b\u0442\u044c \u043f\u043e\u0437\u0436\u0435 \u0447\u0435\u043c \u0442\u0435\u043a\u0443\u0449\u0430\u044f \u0434\u0430\u0442\u0430\u002e
+
+#a_job_description_cannot_be_more_than = A job description cannot be more than 250 characters.
+#a_job_description_cannot_be_more_than = Описание задачи не может превышать 250 символов.
+a_job_description_cannot_be_more_than = \u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0437\u0430\u0434\u0430\u0447\u0438 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u043f\u0440\u0435\u0432\u044b\u0448\u0430\u0442\u044c \u0032\u0035\u0030 \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
+
+#error_creating_job = Error creating Job.
+#error_creating_job = Ошибка создания задачи.
+error_creating_job = \u041e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u044f \u0437\u0430\u0434\u0430\u0447\u0438\u002e
+
+#you_can_see_the_log_file = You can see the log file
+#you_can_see_the_log_file = Вы можете просмотреть файл логов
+you_can_see_the_log_file = \u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0444\u0430\u0439\u043b \u043b\u043e\u0433\u043e\u0432
+
+#this_trigger = This trigger
+#this_trigger = Указаный триггер
+this_trigger = \u0423\u043a\u0430\u0437\u0430\u043d\u044b\u0439 \u0442\u0440\u0438\u0433\u0433\u0435\u0440
+
+#has_been_paused = has been paused, and will not run again until it is restored.
+#has_been_paused = была остановленна до тех пор пока задача не будет восстановлена.
+has_been_paused = \u0431\u044b\u043b\u0430 \u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u043d\u0430 \u0434\u043e \u0442\u0435\u0445 \u043f\u043e\u0440 \u043f\u043e\u043a\u0430 \u0437\u0430\u0434\u0430\u0447\u0430 \u043d\u0435 \u0431\u0443\u0434\u0435\u0442 \u0432\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0430\u002e
+
+#the_following_job = The following job
+#the_following_job = Следующая задача
+the_following_job = \u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0430\u044f \u0437\u0430\u0434\u0430\u0447\u0430
+
+#corresponding_trigger_deleted = and its corresponding Trigger have been deleted from the system.
+#corresponding_trigger_deleted = и соответствующий триггер был удален из системы.
+corresponding_trigger_deleted = \u0438 \u0441\u043e\u043e\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u044e\u0449\u0438\u0439 \u0442\u0440\u0438\u0433\u0433\u0435\u0440 \u0431\u044b\u043b \u0443\u0434\u0430\u043b\u0435\u043d \u0438\u0437 \u0441\u0438\u0441\u0442\u0435\u043c\u044b\u002e
+
+#resumed_and_will_continue = has been resumed and will continue to run until paused or deleted.
+#resumed_and_will_continue = был восстановлен и продожит работу до тех пор пока не будет остановлен или удален.
+resumed_and_will_continue = \u0431\u044b\u043b \u0432\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d \u0438 \u043f\u0440\u043e\u0434\u043e\u0436\u0438\u0442 \u0440\u0430\u0431\u043e\u0442\u0443 \u0434\u043e \u0442\u0435\u0445 \u043f\u043e\u0440 \u043f\u043e\u043a\u0430 \u043d\u0435 \u0431\u0443\u0434\u0435\u0442 \u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d \u0438\u043b\u0438 \u0443\u0434\u0430\u043b\u0435\u043d\u002e
+
+#job_ran = Job Ran
+#job_ran = Запуск задачи
+job_ran = \u0417\u0430\u043f\u0443\u0441\u043a \u0437\u0430\u0434\u0430\u0447\u0438
+
+#you_may_access = You may access the
+#you_may_access = У вас есть доступ
+you_may_access = \u0423 \u0432\u0430\u0441 \u0435\u0441\u0442\u044c \u0434\u043e\u0441\u0442\u0443\u043f
+
+#file_by_changing = file by changing your study/site to
+#file_by_changing = файлу изменением вашего исследования на
+file_by_changing = \u0444\u0430\u0439\u043b\u0443 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0435\u043c \u0432\u0430\u0448\u0435\u0433\u043e \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f \u043d\u0430
+
+#and_selecting_the_export_data = and selecting the Export Data icon for
+#and_selecting_the_export_data = и выбором иконки экспорта данных для
+and_selecting_the_export_data = \u0438 \u0432\u044b\u0431\u043e\u0440\u043e\u043c \u0438\u043a\u043e\u043d\u043a\u0438 \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f
+
+#dataset_on_the_view_dataset = dataset on the View Datasets page.
+#dataset_on_the_view_dataset = набор данных на странице просмотра набора данных.
+dataset_on_the_view_dataset = \u043d\u0430\u0431\u043e\u0440 \u0434\u0430\u043d\u043d\u044b\u0445 \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435 \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u043d\u0430\u0431\u043e\u0440\u0430 \u0434\u0430\u043d\u043d\u044b\u0445\u002e
+
+#the_item_has_been_removed = The item has been removed, this Discrepancy Note has been Closed.
+#the_item_has_been_removed = Элементы был удален и статус замечания был изменен на закрытый.
+the_item_has_been_removed = \u042d\u043b\u0435\u043c\u0435\u043d\u0442\u044b \u0431\u044b\u043b \u0443\u0434\u0430\u043b\u0435\u043d \u0438 \u0441\u0442\u0430\u0442\u0443\u0441 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f \u0431\u044b\u043b \u0438\u0437\u043c\u0435\u043d\u0435\u043d \u043d\u0430 \u0437\u0430\u043a\u0440\u044b\u0442\u044b\u0439\u002e
+
+#summary_statistics = Summary Statistics
+#summary_statistics = Итогова статистика
+summary_statistics = \u0418\u0442\u043e\u0433\u043e\u0432\u0430 \u0441\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430
+
+#subjects_affected = Subjects Affected
+#subjects_affected = Используемые субъекты
+subjects_affected = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u043c\u044b\u0435 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u044b
+
+#event_crfs_affected = Event CRFs Affected
+#event_crfs_affected = Используемые ИРК событий
+event_crfs_affected = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u043c\u044b\u0435 \u0418\u0420\u041a \u0441\u043e\u0431\u044b\u0442\u0438\u0439
+
+#validation_rules_generated = Validation Rules Generated
+#validation_rules_generated = Правила проверки сгенерировано
+validation_rules_generated = \u041f\u0440\u0430\u0432\u0438\u043b\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438 \u0441\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043e
+
+#event_crf_oid = Event CRF OID
+#event_crf_oid = OID ИРК События
+event_crf_oid = \u004f\u0049\u0044 \u0418\u0420\u041a \u0421\u043e\u0431\u044b\u0442\u0438\u044f
+
+#repeat_key = Repeat key
+#repeat_key = Ключ повторений
+repeat_key = \u041a\u043b\u044e\u0447 \u043f\u043e\u0432\u0442\u043e\u0440\u0435\u043d\u0438\u0439
+
+#crf_version_oid = CRF Version OID
+#crf_version_oid = OID версии ИРК
+crf_version_oid = \u004f\u0049\u0044 \u0432\u0435\u0440\u0441\u0438\u0438 \u0418\u0420\u041a
