--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -614,3 +614,8 @@ unlock = \u0440\u0430\u0437\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043
 #Not_Closed =  Not Closed
 #Not_Closed = Не закрыто
 Not_Closed = \u041d\u0435 \u0437\u0430\u043a\u0440\u044b\u0442\u043e
+
+#file_upper_case = File
+#file_upper_case = Файл
+file_upper_case = \u0424\u0430\u0439\u043b
+
