--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3480,7 +3480,8 @@ systemProperty.mailHost.label=Host name
 systemProperty.mailHost.description=These Properties configure the email interface. SMTP and SMTPS protocols are supported. \  If the host requires a username and password make sure Authentication is set to true.  Minimum connection timeout is 5 seconds.
 systemProperty.mailPort.label=Port number
 systemProperty.mailPort.description=
-systemProperty.mailSmtpConnectionTimeout.label=Connection timeoutsystemProperty.mailSmtpConnectionTimeout.description=
+systemProperty.mailSmtpConnectionTimeout.label=Connection timeout
+systemProperty.mailSmtpConnectionTimeout.description=
 systemProperty.mailUsername.label=Username
 systemProperty.mailUsername.description=
 systemProperty.mailPassword.label=PasswordsystemProperty.mailPassword.description=
@@ -3801,3 +3802,25 @@ data_entry_quality = Data Entry Quality
 crf_data_evaluation = CRF data evaluation
 
 allowRulesAutoScheduling = Auto-scheduling for Insert Rules
+
+error = Error:
+author = Author
+comments = Comments
+tag = Tag
+liquibase = Liquibase
+login_attempt_date =  Login Attempt Date
+login_status = Login Status
+verbatim_term = Verbatim Term
+medical_codes = Medical Codes
+coding_status = Status
+dictionary_not_found = Dictionary Not Found
+here_lower_case = here
+success = Success
+failure = Failure
+update = Update
+schema = Schema
+host = Host
+auto_deleted = Auto Deleted
+not_done = not done
+under_the_study = under the Study
+totals = Totals
