--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7022,3 +7022,87 @@ crf_data_evaluation = \u041E\u0446\u0435\u043D\u043A\u0430 \u0434\u0430\u043D\u0
 #allowRulesAutoScheduling = Auto-scheduling for Insert Rules
 #allowRulesAutoScheduling = Автопланирование для правил со вставкой значений
 allowRulesAutoScheduling = \u0410\u0432\u0442\u043e\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u043f\u0440\u0430\u0432\u0438\u043b \u0441\u043e \u0432\u0441\u0442\u0430\u0432\u043a\u043e\u0439 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0439
+
+#error = Error:
+#error = Ошибка:
+error = \u041e\u0448\u0438\u0431\u043a\u0430\u003a
+
+#author = Author
+#author = Автор
+author = \u0410\u0432\u0442\u043e\u0440
+
+#comments = Comments
+#comments = Комментарии
+comments = \u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+
+#tag = Tag
+#tag = Тег
+tag = \u0422\u0435\u0433
+
+#liquibase = Liquibase
+#liquibase = Liquibase
+liquibase = Liquibase
+
+#login_attempt_date =  Login Attempt Date
+#login_attempt_date =  Дата попытки входа
+login_attempt_date =  \u0414\u0430\u0442\u0430 \u043f\u043e\u043f\u044b\u0442\u043a\u0438 \u0432\u0445\u043e\u0434\u0430
+
+#login_status = Login Status
+#login_status = Статус входа
+login_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u0432\u0445\u043e\u0434\u0430
+
+#verbatim_term = Verbatim Term
+#verbatim_term = Дословный термин
+verbatim_term = \u0414\u043e\u0441\u043b\u043e\u0432\u043d\u044b\u0439 \u0442\u0435\u0440\u043c\u0438\u043d
+
+#medical_codes = Medical Codes
+#medical_codes = Медицинские коды
+medical_codes = \u041c\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u0438\u0435 \u043a\u043e\u0434\u044b
+
+#coding_status = Status
+#coding_status = Статус
+coding_status = \u0421\u0442\u0430\u0442\u0443\u0441
+
+#dictionary_not_found = Dictionary Not Found
+#dictionary_not_found = Словарь не был найдет
+dictionary_not_found = \u0421\u043b\u043e\u0432\u0430\u0440\u044c \u043d\u0435 \u0431\u044b\u043b \u043d\u0430\u0439\u0434\u0435\u0442
+
+#here_lower_case = here
+#here_lower_case = здесь
+here_lower_case = \u0437\u0434\u0435\u0441\u044c
+
+#success = Success
+#success = Успех
+success = \u0423\u0441\u043f\u0435\u0445
+
+#failure = Failure
+#failure = Ошибка
+failure = \u041e\u0448\u0438\u0431\u043a\u0430
+
+#update = Update
+#update = Обновление
+update = \u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435
+
+#schema = Schema
+#schema = Схема
+schema = \u0421\u0445\u0435\u043c\u0430
+
+#host = Host
+#host = Хост
+host = \u0425\u043e\u0441\u0442
+
+#auto_deleted = Auto Deleted
+#auto_deleted = Автоматически удален
+auto_deleted = \u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0443\u0434\u0430\u043b\u0435\u043d
+
+#not_done = not done
+#not_done = не готово
+not_done = \u043d\u0435 \u0433\u043e\u0442\u043e\u0432\u043e
+
+#under_the_study = under the Study
+#under_the_study = в рамках исследований
+under_the_study = \u0432 \u0440\u0430\u043c\u043a\u0430\u0445 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u0439
+
+#totals = Totals
+#totals = Итого
+totals = \u0418\u0442\u043e\u0433\u043e
