--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1117,7 +1117,7 @@ write_protected = The file you are trying to remove is write protected please co
 file_removed = The Archive Dataset File removed successfully. 
 error_removing_file = The file could not be remove please contact the Administrator.
 # dynamics
-your_answers_activated_hidden_items=Based on your answers, you need to answer additional questions below. =======
+your_answers_activated_hidden_items=Based on your answers, you need to answer additional questions below.
 crf_name_length_error=CRF name can not be more than 255 characters
 version_length_error=Version can not be more than 255 characters
 version_description_length_error=Version description can not be more than 4000 characters
@@ -1315,4 +1315,41 @@ the_crf_has_been_removed = The CRF has been successfully removed
 are_you_sure_want_to_delete = Are you sure you want to delete this CRF? This action cannot be undone.
 
 operation_cannot_be_performed_on_a_locked_crf = Operation cannot be performed on a locked CRF. Unlock the CRF to code a verbatim item or delete a medical code.
+
+discrepancy_notes_are_saved_successfully = Discrepancy notes are saved successfully.
+error_in_data = Error in data.
+rule_action_warnings = Rule Action Warnings:
+
+the_extract_data_job_failed = The extract data job failed with the message: <br/><br/>
+more_information_may_be_available = <br/><br/>More information may be available in the log files.
+your_extract_is_now_completed = Your Extract is now completed. Please go to review it
+select_the_hour_start = Select the start hour, please.
+select_the_start_minute = Select the start minute, please.
+you_have_successfully_created_a_new_job = You have successfully created a new job:
+which_is_now_set_to_run = which is now set to run at the time you specified.
+please_pick_at_least_one = Please pick at least one.
+this_date_needs_to_be_later = This date needs to be later than the present time.
+a_job_description_cannot_be_more_than = A job description cannot be more than 250 characters.
+error_creating_job = Error creating Job.
+you_can_see_the_log_file = You can see the log file
+this_trigger = This trigger
+has_been_paused = has been paused, and will not run again until it is restored.
+the_following_job = The following job
+corresponding_trigger_deleted = and its corresponding Trigger have been deleted from the system.
+resumed_and_will_continue = has been resumed and will continue to run until paused or deleted.
+job_ran = Job Ran
+you_may_access = You may access the
+file_by_changing = file by changing your study/site to
+and_selecting_the_export_data = and selecting the Export Data icon for
+dataset_on_the_view_dataset = dataset on the View Datasets page.
+the_item_has_been_removed = The item has been removed, this Discrepancy Note has been Closed.
+summary_statistics = Summary Statistics
+subjects_affected = Subjects Affected
+event_crfs_affected = Event CRFs Affected
+validation_rules_generated = Validation Rules Generated
+event_crf_oid = Event CRF OID
+repeat_key = Repeat key
+crf_version_oid = CRF Version OID
+of_warnings = of Warnings
+of_discrepancy_notes = of Discrepancy Notes
 
