--- a/web/src/main/config/languages/en/terms_en.properties
+++ b/web/src/main/config/languages/en/terms_en.properties
@@ -49,6 +49,7 @@ Family/Pedigree = Family/Pedigree
 Favorite_Pet = Favorite Pet
 Favorite_Animal = Favorite Animal
 file = file
+file_upper_case = File
 floating = floating
 frozen = frozen
 genetic = genetic
