--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -2067,7 +2067,7 @@ parent_id_1 =  \\u0075\u0030\u0030\u0032\u0030\u043d\u0435 \u0441\u0443\u0449\u0
 parentId_group = \u041f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u0430\u044f \u0432 \u043f\u043e\u0432\u0442\u043e\u0440\u044f\u044e\u0449\u0435\u0439\u0441\u044f \u0433\u0440\u0443\u043f\u043f\u0435 \u0438\u043c\u0435\u0435\u0442 \u0440\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u0438\u0439 \u0049\u0044 \u0028\u0441\u0442\u0440\u043e\u043a\u0430\\u0075\u0030\u0030\u0032\u0030
 #items_worksheet_with_dot  =  Items sheet.\u0020
 #items_worksheet_with_dot  = Лист с переменными.\u0020
-items_worksheet_with_dot  = \u041b\u0438\u0441\u0442 \u0441 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u043c\u0438\u002e\\u0075\u0030\u0030\u0032\u0030
+items_worksheet_with_dot  = \u041b\u0438\u0441\u0442 \u0441 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u043c\u0438.\u0020
 #group_in_several_sections = Items of one repeating group spread over several sections. Check items in Group '
 #group_in_several_sections = Переменные из одной группы попали в разные разделы. Подалйста проверьте переменные в группе '
 group_in_several_sections = \u041f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u0435 \u0438\u0437 \u043e\u0434\u043d\u043e\u0439 \u0433\u0440\u0443\u043f\u043f\u044b \u043f\u043e\u043f\u0430\u043b\u0438 \u0432 \u0440\u0430\u0437\u043d\u044b\u0435 \u0440\u0430\u0437\u0434\u0435\u043b\u044b\u002e \u041f\u043e\u0434\u0430\u043b\u0439\u0441\u0442\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u044c\u0442\u0435 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u044b\u0435 \u0432 \u0433\u0440\u0443\u043f\u043f\u0435 \u0027
