Fixes #1892: Add missing messages to _ru files (second). Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2382 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -271,9 +271,22 @@ YOB  = YOB\: YYYY
 #Years  =  Years
 #Years  = Лет
 Years  = \u041b\u0435\u0442
+
+#custom = Custom
+#custom = Настраиваемый
+custom = \u041d\u0430\u0441\u0442\u0440\u0430\u0438\u0432\u0430\u0435\u043c\u044b\u0439
+#auto_generated_prefix = Prefix
+#auto_generated_prefix = Префикс
+auto_generated_prefix = \u041f\u0440\u0435\u0444\u0438\u043a\u0441
+#auto_generated_separator = Separator
+#auto_generated_separator = Разделитель
+auto_generated_separator = \u0420\u0430\u0437\u0434\u0435\u043b\u0438\u0442\u0435\u043b\u044c
+#auto_generated_suffix = Digits
+#auto_generated_suffix = Числа
+auto_generated_suffix = \u0427\u0438\u0441\u043b\u0430
 #about  =  About
-#about  = О
-about  = \u041e
+#about  = О продукте
+about  = \u041e \u043f\u0440\u043e\u0434\u0443\u043a\u0442\u0435
 #action  =  Action
 #action  = Действие
 action  = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
@@ -283,9 +296,8 @@ action_message  = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435\u002f\u0421\u
 #actions  =  Actions
 #actions  = Действия
 actions  = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
-##Sidebar@@@@@@@@@@@@@@@@@@@@@@@@ = 
-##Sidebar@@@@@@@@@@@@@@@@@@@@@@@@ = 
-#Sidebar@@@@@@@@@@@@@@@@@@@@@@@@ = 
+
+#Sidebar
 #actios  =  Actions
 #actios  = Действия
 actios  = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
