--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -503,8 +503,8 @@ value_not_match = \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435\u002c \u043a\
 #values_must_from_valid = Ответы должны быть из предоставленного списка.
 values_must_from_valid = \u041e\u0442\u0432\u0435\u0442\u044b \u0434\u043e\u043b\u0436\u043d\u044b \u0431\u044b\u0442\u044c \u0438\u0437 \u043f\u0440\u0435\u0434\u043e\u0441\u0442\u0430\u0432\u043b\u0435\u043d\u043d\u043e\u0433\u043e \u0441\u043f\u0438\u0441\u043a\u0430\u002e
 #was_updated_succesfully =  was updated successfully.
-#was_updated_succesfully = был успешно обновлен.
-was_updated_succesfully = \u0431\u044b\u043b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u002e
+#was_updated_succesfully = была успешно обновлена.
+was_updated_succesfully = \u0431\u044b\u043b\u0430 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0430.
 #will_be_changed_if_you_continue =  will be changed if you continue. If you think you made mistake, please go back and rename the item.
 #will_be_changed_if_you_continue =  будет изменено, если вы продолжите. Если вы думаете, что сделали ошибку, пожалуйста вернитесь и переименуйте переменную.
 will_be_changed_if_you_continue =  \u0431\u0443\u0434\u0435\u0442 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u043e\u002c \u0435\u0441\u043b\u0438 \u0432\u044b \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u002e \u0415\u0441\u043b\u0438 \u0432\u044b \u0434\u0443\u043c\u0430\u0435\u0442\u0435\u002c \u0447\u0442\u043e \u0441\u0434\u0435\u043b\u0430\u043b\u0438 \u043e\u0448\u0438\u0431\u043a\u0443\u002c \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u0435\u0440\u043d\u0438\u0442\u0435\u0441\u044c \u0438 \u043f\u0435\u0440\u0435\u0438\u043c\u0435\u043d\u0443\u0439\u0442\u0435 \u043f\u0435\u0440\u0435\u043c\u0435\u043d\u043d\u0443\u044e\u002e
