Fixes #1840: Remove all hardcoded messages in widgets js files. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2386 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1645,6 +1645,8 @@ preview_CRF_failed_invalid_data = Preview CRF Failed: Invalid CRF Data
 
 preview_CRF = Preview CRF
 
+previous = Previous
+
 previous_fire_time = Previous Fire Time
 
 previous_metadataversion_ODM_ID = Previous MetaDataVersion ODM ID
@@ -3283,6 +3285,13 @@ evaluation_progress_widget_description = CRFs Evaluation Progress.
 available_widgets = Available Widgets
 one_column_widgets = Small Widgets
 two_column_widgets = Large Widgets
+
+# widgets legend and status elements
+w_status_sdved = SDV-ed event CRFs
+w_status_available_for_sdv = Available for SDV
+w_status_coded_item = Coded Items
+w_status_items_to_be_coded = Items to be Coded
+w_legend_notes = Notes
 
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
