--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2156,8 +2156,8 @@ new_password  = \u041d\u043e\u0432\u044b\u0439 \u043f\u0430\u0440\u043e\u043b\u0
 #news  = Новости
 news  = \u041d\u043e\u0432\u043e\u0441\u0442\u0438
 #next  =  Next
-#next  = Следующий
-next  = \u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439
+#next  = Следующая
+next  = \u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0430\u044f
 #next_fire_time  =  Next Fire Time
 #next_fire_time  = Время следующего запуска
 next_fire_time  = \u0412\u0440\u0435\u043c\u044f \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0435\u0433\u043e \u0437\u0430\u043f\u0443\u0441\u043a\u0430
@@ -2473,6 +2473,9 @@ preview_CRF_failed_invalid_data  = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0
 #preview_CRF  =  Preview CRF
 #preview_CRF  = Просмотр ИРК
 preview_CRF  = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0418\u0420\u041a
+#previous  =  Previous
+#previous  = Предыдущая
+previous  = \u041f\u0440\u0435\u0434\u044b\u0434\u0443\u0449\u0430\u044f
 #previous_fire_time  =  Previous Fire Time
 #previous_fire_time  = Время предыдущего запуска
 previous_fire_time  = \u0412\u0440\u0435\u043c\u044f \u043f\u0440\u0435\u0434\u044b\u0434\u0443\u0449\u0435\u0433\u043e \u0437\u0430\u043f\u0443\u0441\u043a\u0430
@@ -5605,12 +5608,11 @@ completed = \u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 #completed_ =  completed
 #completed_ = Завершено
 completed_ = \u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
-## ticket 329 = 
-## ticket 329 = 
-# ticket 329 = 
+
+# ticket 329
 #customize_home_page =  Customize Home Page
-#customize_home_page = Настроить домашнюю страницу
-customize_home_page = \u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u0434\u043e\u043c\u0430\u0448\u043d\u044e\u044e \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443
+#customize_home_page = Настроить страницу
+customize_home_page = \u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443
 
 # widgets headers
 #nds_assigned_to_me_widget_header =  My Discrepancies
@@ -5641,8 +5643,8 @@ coding_progress_widget_header = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0430
 #evaluation_progress_widget_header = Прогресс оценки ИРК
 evaluation_progress_widget_header = \u041F\u0440\u043E\u0433\u0440\u0435\u0441\u0441 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
 #enrollment_status_ps_widget_header = Enrollment Status Per Site
-#enrollment_status_ps_widget_header = Включение собьектов по сайтам
-enrollment_status_ps_widget_header = \u0412\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044C\u0435\u043A\u0442\u043E\u0432 \u043F\u043E \u0441\u0430\u0439\u0442\u0430\u043C
+#enrollment_status_ps_widget_header = Включение субьектов по сайтам
+enrollment_status_ps_widget_header = \u0412\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u0441\u0443\u0431\u044C\u0435\u043A\u0442\u043E\u0432 \u043F\u043E \u0441\u0430\u0439\u0442\u0430\u043C
 
 # widgets description
 #sdv_widget_description =  SDV Progress.
@@ -5671,6 +5673,24 @@ one_column_widgets = \u041c\u0430\u043b\u0435\u043d\u044c\u043a\u0438\u0435 \u04
 #two_column_widgets =  Large Widgets
 #two_column_widgets = Большие виджеты
 two_column_widgets = \u0411\u043e\u043b\u044c\u0448\u0438\u0435 \u0432\u0438\u0434\u0436\u0435\u0442\u044b
+
+# widgets statuses
+#w_status_sdved = SDV-ed event CRFs
+#w_status_sdved = ИРК прошедшие SDV
+w_status_sdved = \u0418\u0420\u041a \u043f\u0440\u043e\u0448\u0435\u0434\u0448\u0438\u0435 \u0053\u0044\u0056
+#w_status_available_for_sdv = Available for SDV
+#w_status_available_for_sdv = Доступные для SDV ИРК
+w_status_available_for_sdv = \u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0434\u043b\u044f \u0053\u0044\u0056 \u0418\u0420\u041a
+#w_status_coded_item = Coded Items
+#w_status_coded_item = Закодированные поля
+w_status_coded_item = \u0417\u0430\u043a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0435 \u043f\u043e\u043b\u044f
+#w_status_items_to_be_coded = Items to be Coded
+#w_status_items_to_be_coded = Доступные для кодирования
+w_status_items_to_be_coded = \u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0434\u043b\u044f \u043a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
+#w_legend_notes = Notes
+#w_legend_notes = Заметки
+w_legend_notes = \u0417\u0430\u043c\u0435\u0442\u043a\u0438
+
 #import_summary_subjects_affected =  Subjects: {0} affected
 #import_summary_subjects_affected = Затрагивает  {0} субъектов
 import_summary_subjects_affected = \u0417\u0430\u0442\u0440\u0430\u0433\u0438\u0432\u0430\u0435\u0442  {0}  \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u043e\u0432
