Fixes #1932: Translation issues on Running Jobs page. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2389 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3833,3 +3833,8 @@ auto_deleted = Auto Deleted
 not_done = not done
 under_the_study = under the Study
 totals = Totals
+fire_time = Fire Time
+export_file = Export File
+job_status = Job Status
+currently_executing = Currently Executing
+skip_next_run = Skip Next Run
