--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7138,3 +7138,18 @@ under_the_study = \u0432 \u0440\u0430\u043c\u043a\u0430\u0445 \u0438\u0441\u0441
 #totals = Totals
 #totals = Итого
 totals = \u0418\u0442\u043e\u0433\u043e
+#fire_time = Fire Time
+#fire_time = Время запуска
+fire_time = \u0412\u0440\u0435\u043c\u044f \u0437\u0430\u043f\u0443\u0441\u043a\u0430
+#export_file = Export File
+#export_file = Файл экспорта
+export_file = \u0424\u0430\u0439\u043b \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430
+#job_status = Job Status
+#job_status = Статус задачи
+job_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u0437\u0430\u0434\u0430\u0447\u0438
+#currently_executing = Currently Executing
+#currently_executing = Выполняется
+currently_executing = \u0412\u044b\u043f\u043e\u043b\u043d\u044f\u0435\u0442\u0441\u044f
+#skip_next_run = Skip Next Run
+#skip_next_run = Пропустить задачу
+skip_next_run = \u041f\u0440\u043e\u043f\u0443\u0441\u0442\u0438\u0442\u044c \u0437\u0430\u0434\u0430\u0447\u0443
